--- a/components/DropdownGrid/Dropdown.module.scss
+++ b/components/DropdownGrid/Dropdown.module.scss
@@ -14,7 +14,7 @@
     border-radius: 2px;
     padding: 0.875rem 5.5rem;
     text-align: center;
-    margin: 0.6em;
+    // margin: 0.6em;
     color: $browser_text;
     cursor: pointer;
     position: relative;
