--- a/components/HomeForm/Form.module.scss
+++ b/components/HomeForm/Form.module.scss
@@ -65,6 +65,43 @@
       box-shadow: 1px 1px 1.5px 0.2px rgb(59, 54, 54);
       background-color: #e7e7e6;
       border: 1px solid gray;
+      cursor: pointer;
+    }
+
+    .Form_Login_check {
+      margin-bottom: 2rem;
+
+      input {
+        padding: 0;
+        cursor: pointer;
+      }
+
+      label {
+        font-size: 0.9rem;
+      }
+    }
+    .Form_Login_checkDis {
+      margin-bottom: 2rem;
+
+      input {
+        padding: 0;
+        cursor: pointer;
+      }
+
+      label {
+        font-size: 0.9rem;
+        color: #91918c;
+      }
+    }
+
+    .MobileCode {
+      border-radius: 0px;
+      margin-bottom: 1.5rem;
+      padding: 0.8rem 1.5rem;
+      box-shadow: 1px 1px 1.5px 0.2px rgb(59, 54, 54);
+      background-color: #e7e7e6;
+      border: 1px solid gray;
+      border-right: 0;
     }
   }
 
