--- a/pages/Register/RegisterComponent/Component.module.scss
+++ b/pages/Register/RegisterComponent/Component.module.scss
@@ -25,7 +25,7 @@
   }
 
   .inputCover {
-    border: 1px solid #d9d9d9;
+    // border: 1px solid #d9d9d9;
 
     input {
       border-radius: 2px;
@@ -77,6 +77,7 @@
       text-align: start;
       position: absolute;
       left: 0rem;
+      top: 0;
     }
 
     .inputBox {
@@ -190,16 +191,18 @@
   }
 
 }
-.formEdit{
-  +button{
+
+.formEdit {
+  +button {
     margin-top: 3rem;
   }
 }
+
 .active {
   visibility: visible !important;
 }
 
-@media only screen and (max-width: 990px) and (min-width: 768px) {
+@media only screen and (max-width: 990px) and (min-width: 767px) {
   .profile_Container {
     padding: 0 2rem;
     padding-bottom: 5rem;
@@ -215,11 +218,11 @@
         flex-direction: column;
         gap: 0.3rem;
 
-        label {
-          position: initial;
-          margin: 0%;
-          text-align: start;
-        }
+        // label {
+        //   position: initial;
+        //   margin: 0%;
+        //   text-align: start;
+        // }
 
         .inputBox {
           margin: 0%;
@@ -229,6 +232,7 @@
 
           input {
             text-align: start;
+            padding: 1.5rem;
           }
         }
       }
@@ -245,27 +249,31 @@
     .formEdit {
       display: flex;
       flex-direction: column;
-      gap: 2rem;
+      gap: 10px;
+
+      label {
+        position: initial;
+        margin: 0%;
+        text-align: start;
+      }
 
       .singleBox {
         display: flex;
         flex-direction: column;
-        gap: 0.3rem;
-
-        label {
-          position: initial;
-          margin: 0%;
-          text-align: start;
-        }
+        gap: 0.5rem;
 
         .inputBox {
-          margin: 0%;
+          margin: 0.6rem 0;
           padding: 0%;
-          text-align: start;
           width: -webkit-fill-available;
 
-          input {
+          .blankInput {
             text-align: start;
+
+            input {
+              text-align: start;
+              padding: 1.5rem;
+            }
           }
         }
       }
@@ -289,15 +297,15 @@
       flex-direction: column;
       gap: 10px;
 
+      label {
+        position: initial;
+        margin: 0%;
+        text-align: start;
+      }
+
       .singleBox {
         display: flex;
         flex-direction: column;
-
-        label {
-          position: initial;
-          margin: 0%;
-          text-align: start;
-        }
 
         .inputBox {
           margin: 0.6rem 0;
@@ -309,6 +317,7 @@
 
             input {
               text-align: start;
+              padding: 1.5rem;
             }
           }
         }
@@ -322,14 +331,16 @@
     text-align: center;
 
     div {
-      padding: 0;
-
+      padding-right: 0;
+      padding-left: 0%;
+      // padding-top: 4rem;
       .formEdit {
         .singleBox {
           .inputBox {
             margin: 0.6rem 0;
             padding: 0%;
-            min-width: 0;
+            width: -webkit-fill-available;
+            min-width: inherit;
           }
         }
       }
