register componet functionalty add and get form value in console , create enms that does not exict.

--- a/pages/Register/RegisterComponent/Component.module.scss
+++ b/pages/Register/RegisterComponent/Component.module.scss
@@ -59,7 +59,7 @@
 
   .singleBox {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     position: relative;
 
     div {
