--- a/components/GenderRadioButtons/GenderInput.module.scss
+++ b/components/GenderRadioButtons/GenderInput.module.scss
@@ -1,5 +1,6 @@
 @import "../../styles/constants.scss";
 
+
 .gender_main {
   gap: 10px;
   .Gender_from_input {
@@ -21,5 +22,12 @@
       cursor: pointer;
       display: inline-block;
     }
+  }
+}
+@media only screen and (max-width: 990px) {
+  .gender_Section_Mob{
+    display: flex;
+    justify-content: space-between;
+    margin: 0.5rem 0;
   }
 }
