--- a/components/LoginHeader/LoginHeader.module.scss
+++ b/components/LoginHeader/LoginHeader.module.scss
@@ -1,25 +1,30 @@
 @import "../../styles/constants.scss";
+
 .Navbar_Wrapper {
   background: $transparent_maroon;
   padding: 0;
   height: 63px;
   width: 76%;
   box-shadow: 0 2px 6px 0 rgb(0 0 0 / 20%);
+
   .navBar_logo {
     width: 163px;
     background-color: $milkWhite_bg;
+
     img {
       max-width: 100%;
       height: 63px;
       width: 100%;
     }
   }
-  .circleImg{
+
+  .circleImg {
     height: 46px;
     width: 46px;
     border-radius: 23px;
   }
-  svg{
+
+  svg {
     height: 46px;
     width: 30px;
 
@@ -36,39 +41,68 @@
     position: relative;
     overflow: hidden;
   }
+
   :hover,
   :focus,
   :active {
     color: $white_txt !important;
   }
-  .navLoginTabs{
+
+  .navLoginTabs {
     position: absolute;
     right: -160px;
     top: 0px;
     display: flex;
     transition: all 0.75s;
   }
-  .active{
+
+  .active {
     right: 0px;
   }
 }
+
 .show {
   display: block;
   font-size: 0.9rem;
   font-weight: 500;
   margin-right: 1.5rem;
 }
+
 .hide {
   display: none;
 }
 
+.profileAvtarDrop {
 
+  height: -webkit-fill-available;
+  padding: 1rem 0.8rem 0.5rem;
+  padding-top: 1.1rem;
 
+  a {
+    padding: 0;
+    margin-right: 0;
 
+    a {
+      ::after {
+        content: none;
+        display: none;
+        visibility: hidden;
+      }
+    }
+  }
+
+}
 
 
 @media screen and (max-width: 767px) {
   .Navbar_Wrapper {
     width: 100%;
+  }
+}
+
+
+@media screen and (max-width: 300px) {
+  .show {
+    margin-right: 0rem;
   }
 }
