build the all remaingin functionalty of my profile page and make it resposnsiv

--- a/components/Button/CustomButton.module.scss
+++ b/components/Button/CustomButton.module.scss
@@ -22,17 +22,25 @@
 
 
 
-    .editcustomButton {
-        padding: 0.75rem 2.5rem;
-        font-weight: $fw500;
-        outline: none;
-        border: 0;
-        background-color: $red_bg;
-        color: $white_txt;
-        transition: 0.5s ease-in-out;
-        width: auto;
-    }
+.editcustomButton {
+    padding: 0.75rem 2.5rem;
+    font-weight: $fw500;
+    outline: none;
+    border: 0;
+    background-color: $red_bg;
+    color: $white_txt;
+    transition: 0.5s ease-in-out;
+    width: auto;
+}
 
-    .editcustomButtonGray {
-        background-color: $darkGrey_bg;
+.editcustomButtonGray {
+    background-color: $darkGrey_bg;
+}
+
+
+
+@media only screen and (max-width: 300px) {
+    .editcustomButton {
+        padding: 0.75rem 1.5rem;
     }
+}
