--- a/components/DropdownGrid/Dropdown.module.scss
+++ b/components/DropdownGrid/Dropdown.module.scss
@@ -49,8 +49,8 @@
         overflow-x: hidden;
         overflow-y: scroll;
         cursor: text;
-        display: grid;
-        grid-template-columns: auto auto auto;
+        display: flex;
+        flex-wrap: wrap;
 
         li {
           position: relative;
