update the content of my profile component like basicDeails career ,likes etc

--- a/components/MyProfile/Components/GlobalDetails.module.scss
+++ b/components/MyProfile/Components/GlobalDetails.module.scss
@@ -95,12 +95,14 @@
             .input_Name {
                 color: #999;
                 margin: 0%;
+                text-transform: capitalize;
             }
 
             .input_Value {
                 color: #979090;
                 font-weight: 600;
                 margin: 0%;
+                text-transform: capitalize;
             }
 
             .input_Value_NotFilled {
