--- a/components/EditMyProfile/EditDetails.module.scss
+++ b/components/EditMyProfile/EditDetails.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/constants.scss";
+// @import "../../pages/Register/RegisterComponent/Component.module.scss";
 
 .content {
     padding: 2rem;
@@ -395,7 +396,7 @@
     input {
         border: 1px solid #d9d9d9;
         border-radius: 2px;
-        padding: 0.875rem 2.5rem;
+        padding: 0.5rem 2.5rem;
         text-align: center;
         min-width: 75%;
         float: right;
