--- a/components/DropdownGrid/Dropdown.module.scss
+++ b/components/DropdownGrid/Dropdown.module.scss
@@ -14,7 +14,7 @@
   .inputBox {
     border: 1px solid #d9d9d9;
     border-radius: 2px;
-    padding: 0.875rem 5.5rem;
+    padding: 0.5rem 1rem;
     text-align: center;
     // margin: 0.6em;
     color: $browser_text;
@@ -95,6 +95,7 @@
       font-family: sans-serif;
       line-height: normal;
       border-radius: 0;
+      width: 100%;
     }
   }
 
@@ -310,7 +311,7 @@
 
         input {
           text-align: start;
-          padding: 1.5rem;
+          padding: 1.5rem 1rem;
         }
       }
     }
