Registrations issue fixed

--- a/components/CountryStateCityList/CountryStateCity.module.scss
+++ b/components/CountryStateCityList/CountryStateCity.module.scss
@@ -16,6 +16,13 @@
         margin: auto;
         margin-right: 0;
         display: block;
+        text-align: center;
+        outline: none;
+
+        option {
+            width: 50%;
+            text-align: center;
+        }
     }
 }
 
