--- a/components/DropdownGrid/Dropdown.module.scss
+++ b/components/DropdownGrid/Dropdown.module.scss
@@ -16,7 +16,6 @@
     border-radius: 2px;
     padding: 0.5rem 1rem;
     text-align: center;
-    // margin: 0.6em;
     color: $browser_text;
     cursor: pointer;
     position: relative;
@@ -82,7 +81,6 @@
     border: none !important;
     background: transparent !important;
     list-style: none;
-
     input {
       padding: 0;
       height: 25px;
@@ -90,7 +88,7 @@
       border: 0 !important;
       background: transparent !important;
       box-shadow: none;
-      color: #999;
+      color: #1014f7 !important;
       font-size: 100%;
       font-family: sans-serif;
       line-height: normal;
