--- a/pages/Register/RegisterComponent/Component.module.scss
+++ b/pages/Register/RegisterComponent/Component.module.scss
@@ -42,9 +42,10 @@
   gap: 2rem;
 
   label {
-    margin: 0rem 0 0 -11rem;
-    text-align: start;
+    margin: 0.5rem 0 0 -11rem;
     position: absolute;
+    min-width: 145px;
+    text-align: right;
   }
 
   .singleBox {
@@ -64,10 +65,14 @@
     }
 
     label {
-      text-align: start;
+
+      text-align: right;
       position: absolute;
       left: 0rem;
-      top: 0;
+      top: 50%;
+      transform: translateY(-50%);
+      margin-top: 0;
+
     }
 
     .inputBox {
@@ -77,7 +82,7 @@
       text-align: center;
       margin: 0.6em;
       margin-right: 0%;
-      color: $browser_text;
+      color: $red_bg;
       cursor: pointer;
       position: relative;
       min-width: 275px;
@@ -323,6 +328,7 @@
     div {
       padding-right: 0;
       padding-left: 0%;
+
       // padding-top: 4rem;
       .formEdit {
         .singleBox {
