--- a/components/DropdownGrid/Dropdown.module.scss
+++ b/components/DropdownGrid/Dropdown.module.scss
@@ -88,7 +88,7 @@
       border: 0 !important;
       background: transparent !important;
       box-shadow: none;
-      color: #1014f7 !important;
+      color: #070707 !important;
       font-size: 100%;
       font-family: sans-serif;
       line-height: normal;
