--- a/components/DropdownGrid/Dropdown.module.scss
+++ b/components/DropdownGrid/Dropdown.module.scss
@@ -45,11 +45,10 @@
         padding: 0 5px;
         width: 100%;
         max-height: 300px;
-        overflow-x: hidden;
-        overflow-y: scroll;
         cursor: text;
         display: flex;
         flex-wrap: wrap;
+       overflow-y: auto;
 
         li {
           position: relative;
