--- a/components/DropdownGrid/Dropdown.module.scss
+++ b/components/DropdownGrid/Dropdown.module.scss
@@ -58,7 +58,7 @@
           max-width: 100%;
           border-radius: 3px;
           background-color: #f5f5f5;
-          cursor: default;
+          cursor: pointer;
           line-height: 16px;
           font-size: 14px;
 
