--- a/components/InputField/SingleInputField/SingleInput.module.scss
+++ b/components/InputField/SingleInputField/SingleInput.module.scss
@@ -131,3 +131,15 @@
 .active {
     visibility: visible !important;
 }
+
+
+
+@media only screen and (max-width: 1200px) and (min-width: 991px) {
+    .singleBox {
+        width: 100%;
+
+        .inputBox{
+            min-width: auto;
+        }
+    }
+  }
