--- a/components/InputField/CasteMultiple/CasteMultiple.module.scss
+++ b/components/InputField/CasteMultiple/CasteMultiple.module.scss
@@ -130,3 +130,15 @@
 .active {
   visibility: visible !important;
 }
+
+
+
+@media only screen and (max-width: 1200px) and (min-width: 991px) {
+  .singleBox {
+      width: 100%;
+
+      .inputBox{
+          min-width: auto;
+      }
+  }
+}
