--- a/components/InputField/CountryStateMultiple/CountryStateCityMultiple.module.scss
+++ b/components/InputField/CountryStateMultiple/CountryStateCityMultiple.module.scss
@@ -1,8 +1,10 @@
 @import "../../../styles/constants.scss";
+
 ///single input box css
 .singleBox {
   display: flex;
   position: relative;
+
   div {
     width: 100%;
 
@@ -25,6 +27,7 @@
     width: 100%;
     position: relative;
     min-width: 580px;
+    height: 8rem;
 
     ul {
       list-style: none;
@@ -129,4 +132,15 @@
 
 .active {
   visibility: visible !important;
+}
+
+
+@media only screen and (max-width: 1200px) and (min-width: 991px) {
+  .singleBox {
+    width: 100%;
+
+    .inputBox {
+      min-width: auto;
+    }
+  }
 }
